--- a/Unicap-arq2/bin/AndroidManifest.xml
+++ b/Unicap-arq2/bin/AndroidManifest.xml
@@ -16,6 +16,11 @@
         <activity
             android:name="com.unicap.unicap_arq2.MainActivity"
             android:label="@string/app_name" >
+            
+        </activity>
+        <activity
+            android:name="com.unicap.audiorec.Audio"
+            android:label="@string/title_activity_audio" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
