--- a/Unicap-arq2/bin/AndroidManifest.xml
+++ b/Unicap-arq2/bin/AndroidManifest.xml
@@ -16,23 +16,25 @@
         <activity
             android:name="com.unicap.unicap_arq2.MainActivity"
             android:label="@string/app_name" >
-                       
         </activity>
         <activity
             android:name="com.unicap.audiorec.Audio"
             android:label="@string/title_activity_audio" >
-	<intent-filter>
+            
+        </activity>
+        <activity
+            android:name="com.unicap.unicap_arq2.TextoAudio"
+            android:label="@string/title_activity_texto_audio" >
+        </activity>
+        <activity
+            android:name="com.unicap.audiorec.Initaudio"
+            android:label="@string/title_activity_initaudio" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.unicap.unicap_arq2.TextoAudio"
-            android:label="@string/title_activity_texto_audio" >
- 	            
-        </activity>
     </application>
-    
 
 </manifest>
